# noise-c

./: configure.ac
examples/: Makefile.am
examples/simple-client/: .gitignore  Makefile.am  simple-client.c
src/backend/ref/: hash-sha256.c
src/crypto/blake2/: blake2-endian.h
src/crypto/ghash/: ghash.c
src/crypto/goldilocks/src/include/: word.h
src/crypto/sha2/: sha256.c  sha256.h
src/protocol/: rand_os.c  util.c
